<resources>
    <string name="app_name">Fundoo</string>
    <string name="intro_sub_heading">Isn\'t life a collection of weird quizzes with \nno answers to half the questions</string>
    <string name="intro_heading">Fundoo Quiz App</string>
    <string name="get_started">Get Started</string>
    <string name="login_now">Login Now</string>
    <string name="login_body_text">Please login to continue using app</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_text_sign_up">Don\'t have an account? Sign up</string>
    <string name="stay_connected">Stay Connected</string>
    <string name="signup_body_text">Enter your email address and password \nto get access to your account</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_text_signup">Already have an account? Login</string>
    <string name="privacy_policy">By creating an account, you agree to our \n<a href="https://google.com">Terms &amp; Conditions</a> and agree to <a href="https://google.com">Privacy Policy.</a></string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="more_options">More Options</string>
    <string name="quiz_description">As per the Ministry of Culture, how many centrally protected monuments are missing?</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_submit">Submit</string>
    <string name="quiz_dummy_option">Rajasthan</string>
    <string name="fab_content_desc_main">Date Picker</string>
    <string name="log_out">Log Out</string>
</resources>